--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="src" path="/2025_depurador"/>
+	<classpathentry kind="src" path="/2025_enumeraciones"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
