--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="src" path="/2025_depurador"/>
-	<classpathentry kind="src" path="/2025_enumeraciones"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/2025_depurador"/>
+	<classpathentry exported="true" kind="src" path="/2025_enumeraciones"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
